# ecomm-prod-assistant

./: Dockerfile  chat_frontend.py  chatbot.db-shm  chatbot.db-wal  data_ingestion_ui.py  devcontainer.json  pyproject.toml  requirements.txt  setup.py  start.sh  streamlit_app.py  streamlit_frontend_tool.py  streamlit_frontend_tool2.py  version.py
.github/workflows/: deploy.yml
checkpoints/: email_tracker.db  email_tracker.db-shm  email_tracker.db-wal
data/: product_reviews.csv
infra/: eks-with-ecr.yaml
k8/: deployment.yaml
notebook/: chatbot.db-shm  chatbot.db-wal  test.ipynb
prod_assistant/chatbot/: langgraph_tool_backend.py  langgraph_tool_backend2.py
prod_assistant/chatbot/faiss_index/: index.pkl  ingested_meta.json
prod_assistant/chatbot/faiss_index/default/: index.pkl  ingested_meta.json
prod_assistant/chatbot/faiss_index/session_20250908_223345_1c838765/: index.pkl  ingested_meta.json
prod_assistant/chatbot/faiss_index/session_20250909_062045_3993d87c/: ingested_meta.json
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/model/: models.py
prod_assistant/prompt/: prompt_library.py
prod_assistant/retriever/: conventional_retreiver.py  retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: config_loader.py  model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp_websearch.py  email_tracker_workflow.py
streamlit/: chat_screen.py  main_page.py  streamlit_app.py  streamlit_test_app.py
templates/: chat.html  index.html  login.html
