[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[project]
name = "ecomm-prod-assistant"
version = "0.1.0"
description = "product Assistant tools"
readme = "README.md"
requires-python = ">=3.10.8"
dependencies = [
     "beautifulsoup4==4.13.5",
    "fastapi==0.116.1",
    "html5lib==1.1",
    "jinja2==3.1.6",
    "langchain==0.3.27",
    "langchain-astradb==0.6.1",
    "langchain_core==0.3.75",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langchain-mcp-adapters==0.1.10",
    "langchain-openai==0.3.32",
    "langchain-huggingface==0.3.1",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "lxml==6.0.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "selenium==4.35.0",
    "streamlit==1.49.1",
    "undetected-chromedriver==3.5.5",
    "uvicorn==0.35.0",
    "structlog==25.4.0",
    "ragas==0.3.4",
    "mcp==1.14.0",
    "ddgs==9.6.0",
    "pyodbc==5.3.0",
    "aiosqlite==0.21.0",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "langchain_astradb",
    "-e ."
    
    
]

# Optional: authors, license
authors = [{ name = "Arshad Abbas" }]
license = { text = "Proprietary" }

# Optional: CLI command (python -m pip install -e . ke baad yeh create hoga)
[project.scripts]
ecomm-assistant = "ecomm-prod-assistant.cli:main"

[tool.setuptools.packages.find]
where = ["prod_assistant"]
include = ["ecomm-prod-assistant*"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
ecomm-prod-assistant = { workspace = true }

[dependency-groups]
dev = [
    "beautifulsoup4==4.13.5",
    "fastapi==0.116.1",
    "html5lib==1.1",
    "jinja2==3.1.6",
    "langchain==0.3.27",
    "langchain-astradb==0.6.1",
    "langchain_core==0.3.75",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langchain-mcp-adapters==0.1.10",
    "langchain-openai==0.3.32",
    "langchain-huggingface==0.3.1",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "lxml==6.0.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "selenium==4.35.0",
    "streamlit==1.49.1",
    "undetected-chromedriver==3.5.5",
    "uvicorn==0.35.0",
    "structlog==25.4.0",
    "ragas==0.3.4",
    "mcp==1.14.0",
    "ddgs==9.6.0",
    "pyodbc==5.3.0",
    "aiosqlite==0.21.0",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "langchain_astradb",
    "-e ."
    
]

